# PA_PEC

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  explore_data.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: braille_agent.py  explanation_agent.py  vision_agent.py  voice_agent.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  health.py  image.py
backend/app/config/: logging.py  settings.py
backend/app/core/: memory.py  pipeline.py  prompts.py
backend/app/schemas/: agent_schema.py  request.py  response.py
backend/app/services/: audio_service.py  braille_service.py  openai_service.py  storage_service.py
backend/app/utils/: audio_utils.py  file_utils.py  validators.py
backend/streamlit/: README.md  api_client.py  app.py  dataset_viewer.py  utils.py  voice_assistant.py
backend/tests/: conftest.py  test_agents.py  test_api.py
backend/voice/: __init__.py  conversation_manager.py  intent_router.py  mic_listener.py  speech_to_text.py  text_to_speech.py  voice_assistant.py
